--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-loader": "^8.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.36.1",
